--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,12 +36,13 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Ventas" asp-action="index">Historial de Ventas</a>
                             </li>
-                                 <li class="nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Entrada" asp-action="index">Entradas</a>
                             </li>
-                            
-                            
-                        </ul>
+                              <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="POS" asp-action="index">Pos</a>
+                            </li>
+                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
                                 <form class="form-inline mt-2 mt-md-0">
