--- a/Views/Reparacion/Index.cshtml
+++ b/Views/Reparacion/Index.cshtml
@@ -13,7 +13,7 @@
 @*<a id="idCreaReparacion" class="btn btn-primary mb-3">Crear nueva reparación</a>*@
 <button type="button" class="btn btn-primary" onclick="mostrarModal()">Crear Reparacion</button>
 <br><br>
-
+@*
 @if (Model == null || !Model.Any())
 {
     <div>No se encontraron reparaciones</div>
@@ -65,7 +65,66 @@ else
 
 
 
+}*@
+
+@if (Model == null || !Model.Any())
+{
+    <div>No se encontraron reparaciones</div>
 }
+else
+{
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Reparaciones</h5>
+            <div class="table-responsive">
+                <table id="reparacionesTable" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Fecha</th>
+                            <th>NIT</th>
+                            <th>Nombre</th>
+                            <th>Motocicleta</th>
+                            <th>Mecánico</th>
+                            <th>Convertido</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var reparacion in Model)
+                        {
+                            <tr>
+                                <td>@reparacion.CodigoReparacion</td>
+                                <td>@reparacion.Fecha.ToShortDateString()</td>
+                                <td>@reparacion.Nit</td>
+                                <td>@reparacion.Nombre</td>
+                                <td>@reparacion.Motocicleta</td>
+                                <td>@reparacion.Mecanico</td>
+                                <td>@(reparacion.ConvertidoAVenta ? "Sí" : "No")</td>
+                                <td>
+                                    <button type="button" class="btn btn-primary opcionesBtn" data-codigo-reparacion="@reparacion.CodigoReparacion" title="Opciones de venta">Opciones</button>
+                                </td>
+                            </tr>
+                        }
+                        @if (!Model.Any())
+                        {
+                            <tr>
+                                <td colspan="8">No se encontraron reparaciones</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function () {
+            $('#reparacionesTable').DataTable();
+        });
+    </script>
+}
+
 
 <div class="modal fade" id="Create" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
