--- a/Views/Inicio/Index.cshtml
+++ b/Views/Inicio/Index.cshtml
@@ -24,7 +24,7 @@
 											<div class="card-body">
 												<div class="row">
 													<div class="col mt-0">
-														<h5 class="card-title">Sales</h5>
+														<h5 class="card-title">Total Ventas</h5>
 													</div>
 
 													<div class="col-auto">
@@ -66,7 +66,7 @@
 											<div class="card-body">
 												<div class="row">
 													<div class="col mt-0">
-														<h5 class="card-title">Earnings</h5>
+														<h5 class="card-title">Ganancias</h5>
 													</div>
 
 													<div class="col-auto">
@@ -86,7 +86,7 @@
 											<div class="card-body">
 												<div class="row">
 													<div class="col mt-0">
-														<h5 class="card-title">Orders</h5>
+														<h5 class="card-title">Ventas</h5>
 													</div>
 
 													<div class="col-auto">
@@ -190,7 +190,7 @@
 							<div class="card flex-fill">
 								<div class="card-header">
 
-									<h5 class="card-title mb-0">Latest Projects</h5>
+									<h5 class="card-title mb-0">Productos mas vendidos</h5>
 								</div>
 								<table class="table table-hover my-0">
 									<thead>
