--- a/Views/Inicio/Index.cshtml
+++ b/Views/Inicio/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Agregar la referencia a jQuery -->
+﻿@*@model SPCOIN.Controllers.InicioController*@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- Agregar la referencia a Chart.js -->
@@ -9,13 +9,12 @@
  @*  <canvas id="chartVentasPorMes"></canvas>
  
 
-                 <canvas id="VendedoresMes"></canvas>
-*@
+                 <canvas id="VendedoresMes"></canvas>*@
+
 			<div class="container-fluid p-0">
 
 					<h1 class="h3 mb-3"><strong>Panel Administrativo</strong></h1>
-
-					<div class="row">
+						<div class="row">
 						<div class="col-xl-6 col-xxl-5 d-flex">
 							<div class="w-100">
 								<div class="row">
@@ -33,10 +32,16 @@
 														</div>
 													</div>
 												</div>
-												<h1 class="mt-1 mb-3">2.382</h1>
+												
+												
+														 <h1 class="mt-1 mb-3" id="TVenta"></h1>
+													
 												<div class="mb-0">
-													<span class="text-danger"> <i class="mdi mdi-arrow-bottom-right"></i> -3.65% </span>
-													<span class="text-muted">Since last week</span>
+													
+
+													<span class="text-danger" id="TMargen"> <i class="mdi mdi-arrow-bottom-right" id="margen"></i></span>
+												
+													<span class="text-muted"></span>
 												</div>
 											</div>
 										</div>
@@ -360,6 +365,7 @@ $(document).ready(function() {
   obtenerDatosVentasAnual();
   ObtenerVendedoresAnual();
   ObtenerVendedoresMensual();
+  //console.log('ViewBag: ',@ViewBag.Totalventas);
 });
 
 
@@ -556,5 +562,30 @@ function ChartvendedoresMensual(datos) {
   });
 }
 
+function actualizarDatos() {
+    $.ajax({
+        url: "/Inicio/ObtenerDatosVentasHoy",
+        type: "GET",
+        dataType: "json",
+        success: function (data) {
+            console.log(data); // Corregido: console.log en lugar de consle.log
+		
+            // Actualizar el total de ventas
+            $("#TVenta").text(data.totalVentas);
+			
+            // Actualizar el margen
+            $("#margen").text(data.margen);
+        },
+        error: function (error) {
+            console.log("Error al obtener datos de ventas hoy:", error);
+        }
+    });
+}
+
+
+    // Llama a la función al cargar la página o cuando sea necesario
+    $(document).ready(function () {
+        actualizarDatos();
+    });
 
 </script>
