--- a/Views/Shared/Plantilla.cshtml
+++ b/Views/Shared/Plantilla.cshtml
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Respon">
-	<meta name="author" content="AdminKit">
+
 	<meta name="keywords" content="">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -39,7 +39,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" asp-area="" asp-controller="Inicio" asp-action="Index">
-          <span class="align-middle">Motorepuestos Pachecos</span>
+          <span class="align-middle">Comercial Anderson</span>
         </a>
 					<ul class="sidebar-nav">
 					<li class="sidebar-header">
@@ -290,7 +290,7 @@
               </a>
 
 							<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#" data-bs-toggle="dropdown">
-                <img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="Charles Hall" /> <span class="text-dark">USUARIO</span>
+              @*  <img src="img/avatars/avatar.jpg" class="avatar img-fluid rounded me-1" alt="Charles Hall" />*@ <span class="text-dark">@TempData["usuario"]</span>
               </a>
 							<div class="dropdown-menu dropdown-menu-end">
 								@*<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1" data-feather="user"></i> Profile</a>
