--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -77,13 +77,17 @@
 										<img src="img/avatars/avatar.jpg" alt="Charles Hall" class="img-fluid rounded-circle" width="132" height="132" />
 									</div>*@
 						<form method="post" asp-action="Login" asp-controller="Login" class="mb-3">
+    
     <div class="mb-3">
-        <label class="form-label">Email</label>
-                       <input  class="form-control form-control-lg" required asp-for="User" placeholder="Usuario" />
+    <label class="form-label">Usuario</label>
+    <input id="inputUsuario" class="form-control form-control-lg" required asp-for="User" placeholder="Usuario" />
+</div>
+    <div class="mb-3">
+        @{
+    // Recuperar el valor almacenado en la sesión
 
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Password</label>
+}
+        <label class="form-label">Contraseña</label>
                 <input type="password" class="form-control form-control-lg" required asp-for="Contraseña" placeholder="Contraseña" required  />
              
         <small>
@@ -112,6 +116,16 @@
 	</main>
 
 	<script src="js/app.js"></script>
+    <script>
+    // Obtener el elemento de entrada por su ID
+    var inputUsuario = document.getElementById('inputUsuario');
+    
+    // Agregar un listener para el evento de entrada
+    inputUsuario.addEventListener('input', function() {
+        // Convertir el texto ingresado a mayúsculas y actualizar el valor del campo de entrada
+        this.value = this.value.toUpperCase();
+    });
+</script>
 
 </body>
 
